# chirpfy

./: Cargo.toml  LICENSE  README.md  SYSTEM_PROMPT.md  instructions.md
chirpfy/: Cargo.toml
src/: agent.rs  error.rs  main.rs
src/tweet/: mod.rs  refiner.rs  validator.rs
