[package]
name = "chirpfy"
version = "0.1.0"
edition = "2021"
authors = ["Mehmet Erturk"]
description = "A CLI tool to refine tweets using AI"

[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
clap = { version = "4.4.11", features = ["derive"] }
config = "0.13.4"
anyhow = "1.0.75"
thiserror = "1.0.50"
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
reqwest = { version = "0.11.22", features = ["json"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18" 